--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>Header</h1>
 		</header>
 			<section id="content">
-				<canvas id="AsteroidsGame" data-processing-sources="Asteroid.pde AsteroidsGame.pde Floater.pde Spaceship.pde Stars.pde Thruster.pde Radar.pde Bullet.pde">
+				<canvas id="AsteroidsGame" data-processing-sources="Asteroid.pde AsteroidsGame.pde Floater.pde Spaceship.pde Stars.pde Thruster.pde Radar.pde Bullet.pde Hyperbeam.pde">
 				</canvas>
 		    </section>
 	    <footer>
